welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: ')' expected but ';' found.
    if (getCouleurSol()==Color.green; estFaceMur()==false){
                                    ^SlugTracking:4: error: ';' expected but ')' found.
    if (getCouleurSol()==Color.green; estFaceMur()==false){
                                                         ^